...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVj-Ov-mHO">
                                <rect key="frame" x="8" y="28" width="62" height="30"/>
                                <state key="normal" title="Favorites"/>
                                <connections>
                                    <action selector="onShowFavorites" destination="BYZ-38-t0r" eventType="touchUpInside" id="5hE-cS-dIO"/>
                                </connections>
                            </button>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WK1-gO-QvJ">
                                <rect key="frame" x="8" y="28" width="359" height="220"/>
...
