...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                    <connections>
                                                        <outletCollection property="gestureRecognizers" destination="1RD-XK-gai" appends="YES" id="rdl-ED-RNU"/>
                                                    </connections>
                                                </label>
                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-plus" translatesAutoresizingMaskIntoConstraints="NO" id="PBJ-n9-xqa">
                                                    <rect key="frame" x="267.5" y="11" width="37.5" height="37.5"/>
                                                    <gestureRecognizers/>
                                                    <connections>
                                                        <outletCollection property="gestureRecognizers" destination="d7G-7E-HSH" appends="YES" id="yCz-tG-kFe"/>
                                                    </connections>
                                                </imageView>
...
